# resume-intelligence

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.steamlit/: config.toml
app/: cli.py
core/: document.py  exception.py  normalizer.py  parser.py
resume_intelligence/: __init__.py
resume_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
resume_intelligence/app/: cli.py  streamlit_app.py
resume_intelligence/core/: document.py  exception.py  normalizer.py  parser.py
resume_intelligence/core/matching/: ats_score.py  embedder.py  matcher.py  similarity.py
resume_intelligence/core/semantics/: concept.py  consolidator.py  embedding.py  extractor.py  similarity.py
tests/: test_document.py  test_normalizer.py  test_parser.py
