[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "resume-intelligence"
version = "0.1.0"
description = "ATS-grade resume intelligence and semantic matching engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Arvinth R A", email = "arvinth2002ra@gmail.com" }
]

dependencies = [
    "spacy>=3.7.0",
    "spacy-transformers>=1.3.5",
    "sentence-transformers>=2.7.0",
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.2",
    "typer>=0.12.0",
    "rich>=13.7.0",
]


[tool.setuptools]
packages = ["resume_intelligence"]


[tool.setuptools.package-data]
resume_intelligence = ["py.typed"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
